--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@solidjs/router": "^0.13.0",
     "@solidjs/start": "^1.0.0",
     "solid-js": "^1.8.0",
-    "vinxi": "^0.3.11",
-    "vite-plugin-radar": "^0.9.6"
+    "vinxi": "^0.3.11"
   },
   "devDependencies": {
+    "@danielx/civet": "^0.7.12",
     "typescript": "^5.4.0"
   },
   "browserslist": [
